--- a/tools/manta/tool_data_table_conf.xml.sample
+++ b/tools/manta/tool_data_table_conf.xml.sample
@@ -1,5 +1,5 @@
 <tables>
-    <table name="all_fasta" comment_char="#">
+    <table name="fasta_indexes" comment_char="#">
         <columns>value, dbkey, name, path</columns>
         <file path="${__HERE__}/test-data/all_fasta.loc" />
     </table>
