--- a/tools/facturation_ibps/requirements.txt
+++ b/tools/facturation_ibps/requirements.txt
@@ -1,5 +1,15 @@
-openpyxl==2.5.9
-pandas==0.23.4
-bs4==0.0.1
-m3-PIL==1.1.7
+diff --git a/lib/galaxy/util/checkers.py b/lib/galaxy/util/checkers.py
+index 3098d92..0058cff 100644
+--- a/lib/galaxy/util/checkers.py
++++ b/lib/galaxy/util/checkers.py
+@@ -41,7 +41,7 @@ def check_html(file_path, chunk=None):
+     for line in temp:
+         line = util.unicodify(line)
+         lineno += 1
+-        matches = regexp1.search(line) or regexp2.search(line) or regexp3.search(line) or regexp4.search(line) or regexp5.searc
+h(line)
++        matches = False
+         if matches:
+             if chunk is None:
+                 temp.close()
 
