--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -10,24 +10,21 @@ on:
     paths-ignore:
       - 'deprecated/**'
       - 'README.md'
+
 env:
   GALAXY_FORK: galaxyproject
   GALAXY_BRANCH: release_25.0
   MAX_CHUNKS: 4
   MAX_FILE_SIZE: 2M
+
 concurrency:
   # Group runs by PR, but keep runs on the default branch separate
   # because we do not want to cancel ToolShed uploads
   group: pr-${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') && github.run_number || github.ref }}
   cancel-in-progress: true
+
 jobs:
-  # the setup job does two things:
-  # 1. cache the pip cache and .planemo
-  # 2. determine the list of changed repositories
-  # it produces one artifact which contains
-  # - a file with the latest SHA from the chosen branch of the Galaxy repo
-  # - a file containing the list of changed repositories
-  # which are needed in subsequent steps.
+  # Setup job: cache pip/planemo and determine changed repositories
   setup:
     name: Setup cache and determine changed repositories
     runs-on: ubuntu-latest
@@ -38,6 +35,7 @@ jobs:
       chunk-count: ${{ steps.discover.outputs.chunk-count }}
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
       commit-range: ${{ steps.discover.outputs.commit-range }}
+      is-pr: ${{ github.event_name == 'pull_request' }}
     strategy:
       matrix:
         python-version: ['3.11']
@@ -51,33 +49,39 @@ jobs:
         echo 'base_ref: ${{ github.base_ref }}'
         echo 'event.before: ${{ github.event.before }}'
         echo 'event.after: ${{ github.event.after }}'
+
     - name: Determine latest commit in the Galaxy repo
       id: get-galaxy-sha
       run: echo "galaxy-head-sha=$(git ls-remote https://github.com/${{ env.GALAXY_FORK }}/galaxy refs/heads/${{ env.GALAXY_BRANCH }} | cut -f1)" >> $GITHUB_OUTPUT
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
+
     - name: Cache .planemo
       uses: actions/cache@v4
       id: cache-planemo
       with:
         path: ~/.planemo
         key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
-    # Install the `wheel` package so that when installing other packages which
-    # are not available as wheels, pip will build a wheel for them, which can be cached.
+
     - name: Install wheel
       run: pip install wheel
+
     - name: Install flake8
       run: pip install flake8 flake8-import-order
+
     - uses: actions/checkout@v5
       with:
         fetch-depth: 0
+
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
       uses: galaxyproject/planemo-ci-action@v1
       id: discover
@@ -87,21 +91,25 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         max-chunks: ${{ env.MAX_CHUNKS }}
         python-version: ${{ matrix.python-version }}
+
     - name: Show commit range
       run: echo '${{ steps.discover.outputs.commit-range }}'
+
     - name: Show repository list
       run: echo '${{ steps.discover.outputs.repository-list }}'
+
     - name: Show tool list
       run: echo '${{ steps.discover.outputs.tool-list }}'
+
     - name: Show chunks
       run: |
         echo 'Using ${{ steps.discover.outputs.chunk-count }} chunks (${{ steps.discover.outputs.chunk-list }})'
 
-  # Planemo lint the changed repositories
+  # Planemo lint - ONLY on PRs (skip on merge to main)
   lint:
     name: Lint tool-list
     needs: setup
-    if: ${{ needs.setup.outputs.repository-list != '' || needs.setup.outputs.tool-list != '' }}
+    if: needs.setup.outputs.is-pr == 'true' && (needs.setup.outputs.repository-list != '' || needs.setup.outputs.tool-list != '')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -111,9 +119,11 @@ jobs:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 1
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
@@ -121,14 +131,6 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
 
-    - name: Set skip version check for push event (i.e. merge to main)
-      if: ${{ github.event_name != 'pull_request' }}
-      run:
-        echo "EXTRA_SKIP=--skip version_bumped" >> "$GITHUB_ENV"
-    - name: Set no skip vor pull_request events
-      if: ${{ github.event_name == 'pull_request' }}
-      run:
-        echo "EXTRA_SKIP=" >> "$GITHUB_ENV"
     - name: Planemo lint
       uses: galaxyproject/planemo-ci-action@v1
       id: lint
@@ -137,18 +139,18 @@ jobs:
         fail-level: warn
         repository-list: ${{ needs.setup.outputs.repository-list }}
         tool-list: ${{ needs.setup.outputs.tool-list }}
-        additional-planemo-options: ${{ env.EXTRA_SKIP }}
+
     - uses: actions/upload-artifact@v4
-      if: ${{ failure() }}
+      if: failure()
       with:
         name: 'Tool linting output'
         path: lint_report.txt
 
-  # flake8 of Python scripts in the changed repositories
+  # flake8 - ONLY on PRs
   flake8:
     name: Lint Python scripts
     needs: setup
-    if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
+    if: needs.setup.outputs.is-pr == 'true' && needs.setup.outputs.repository-list != ''
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -158,29 +160,35 @@ jobs:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 1
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+
     - name: Install flake8
       run: pip install flake8 flake8-import-order
+
     - name: Flake8
       run: echo '${{ needs.setup.outputs.repository-list }}' | xargs -d '\n' flake8 --output-file pylint_report.txt --tee
+
     - uses: actions/upload-artifact@v4
-      if: ${{ failure() }}
+      if: failure()
       with:
         name: 'Python linting output'
         path: pylint_report.txt
 
+  # lintr - ONLY on PRs
   lintr:
     name: Lint R scripts
     needs: setup
-    if: ${{ needs.setup.outputs.repository-list != '' }}
+    if: needs.setup.outputs.is-pr == 'true' && needs.setup.outputs.repository-list != ''
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -190,41 +198,48 @@ jobs:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 1
+
     - uses: r-lib/actions/setup-r@v2
       with:
         r-version: ${{ matrix.r-version }}
+
     - name: Cache R packages
       uses: actions/cache@v4
       with:
         path: ${{ env.R_LIBS_USER }}
         key: r_cache_${{ matrix.os }}_${{ matrix.r-version }}
+
     - name: Install packages
       uses: r-lib/actions/setup-r-dependencies@v2
       with:
         packages: |
           any::argparse 
           any::styler
+
     - name: lintr
       run: |
         set -eo pipefail
         echo '${{ needs.setup.outputs.repository-list }}' | xargs -d '\n' -n 1 ./.github/styler.R --dry off
         git status
         git diff --exit-code | tee rlint_report.txt
+
     - uses: actions/upload-artifact@v4
-      if: ${{ failure() }}
+      if: failure()
       with:
         name: 'R linting output'
         path: rlint_report.txt
 
+  # file_sizes - ONLY on PRs
   file_sizes:
     name: Check file sizes
     needs: setup
-    if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
+    if: needs.setup.outputs.is-pr == 'true' && needs.setup.outputs.repository-list != ''
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 0
+
     - name: Check file sizes
       run: |
         touch file_size_report.txt
@@ -237,18 +252,18 @@ jobs:
           cat file_size_report.txt
           exit 1
         fi
+
     - uses: actions/upload-artifact@v4
-      if: ${{ failure() }}
+      if: failure()
       with:
         name: 'File size report'
         path: file_size_report.txt
 
-  # Planemo test the changed repositories, each chunk creates an artifact
-  # containing HTML and JSON reports for the executed tests
+  # Planemo test - ONLY on PRs
   test:
     name: Test tools
     needs: setup
-    if: ${{ needs.setup.outputs.repository-list != '' }}
+    if: needs.setup.outputs.is-pr == 'true' && needs.setup.outputs.repository-list != ''
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -268,26 +283,32 @@ jobs:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 1
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+
     - name: Cache .planemo
       uses: actions/cache@v4
       id: cache-planemo
       with:
         path: ~/.planemo
         key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+
     - name: Get number of CPU cores
       uses: SimenB/github-actions-cpu-cores@v2
       id: cpu-cores
+
     - name: Clean dotnet folder for space
       run: rm -Rf /usr/share/dotnet
+
     - name: Planemo test
       uses: galaxyproject/planemo-ci-action@v1
       id: test
@@ -299,7 +320,6 @@ jobs:
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup.outputs.chunk-count }}
         galaxy-slots: ${{ steps.cpu-cores.outputs.count }}
-        # Limit each test to 15 minutes
         test_timeout: 1800
 
     - uses: actions/upload-artifact@v4
@@ -307,15 +327,11 @@ jobs:
         name: 'Tool test output ${{ matrix.chunk }}'
         path: upload
 
-  # - combine the results of the test chunks (which will never fail due
-  #   to `|| true`) and create a global test report as json and html which
-  #   is provided as artifact
-  # - check if any tool test actually failed (by lookup in the combined json)
-  #   and fail this step if this is the case
+  # Combine test results - ONLY on PRs
   combine_outputs:
     name: Combine chunked test results
     needs: [setup, test]
-    if: ${{ always() && needs.setup.outputs.repository-list != '' }}
+    if: always() && needs.setup.outputs.is-pr == 'true' && needs.setup.outputs.repository-list != ''
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -324,15 +340,18 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         path: artifacts
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+
     - name: Combine outputs
       uses: galaxyproject/planemo-ci-action@v1
       id: combine
@@ -340,16 +359,20 @@ jobs:
         mode: combine
         html-report: true
         markdown-report: true
+
     - uses: actions/upload-artifact@v4
       with:
         name: 'All tool test results'
         path: upload
+
     - run: cat upload/tool_test_output.md >> $GITHUB_STEP_SUMMARY
+
     - name: Check outputs
       uses: galaxyproject/planemo-ci-action@v1
       id: check
       with:
         mode: check
+
     - name: Check if all test chunks succeeded
       run: |
         NFILES=$(ls artifacts/ | grep "Tool test output" | wc -l)
@@ -357,11 +380,11 @@ jobs:
           exit 1
         fi
 
-  # deploy the tools to the toolsheds (first TTS for testing)
+  # Deploy - ONLY on merge to main (after PR is merged)
   deploy:
     name: Deploy
-    needs: [setup, lint, combine_outputs]
-    if: ${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' ) }} # && github.repository_owner == 'drosofff'
+    needs: setup
+    if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -370,15 +393,18 @@ jobs:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 1
+
     - uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Cache .cache/pip
       uses: actions/cache@v4
       id: cache-pip
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+
     - name: Deploy on toolshed
       uses: galaxyproject/planemo-ci-action@v1
       with:
@@ -387,24 +413,29 @@ jobs:
         shed-target: toolshed
         shed-key: ${{ secrets.TS_API_KEY }}
 
+  # Check workflow success - ONLY on PRs
   determine-success:
     name: Check workflow success
     needs: [setup, lint, flake8, lintr, file_sizes, combine_outputs]
-    if: ${{ always() && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+    if: always() && needs.setup.outputs.is-pr == 'true'
     runs-on: ubuntu-latest
     steps:
     - name: Check tool lint status
-      if: ${{ needs.lint.result != 'success' && needs.flake8.result != 'skipped' }}
+      if: needs.lint.result != 'success' && needs.lint.result != 'skipped'
       run: exit 1
+
     - name: Indicate Python script lint status
-      if: ${{ needs.flake8.result != 'success' && needs.flake8.result != 'skipped' }}
+      if: needs.flake8.result != 'success' && needs.flake8.result != 'skipped'
       run: exit 1
+
     - name: Indicate R script lint status
-      if: ${{ needs.lintr.result != 'success' && needs.lintr.result != 'skipped' }}
+      if: needs.lintr.result != 'success' && needs.lintr.result != 'skipped'
       run: exit 1
+
     - name: Indicate file size check status
-      if: ${{ needs.file_sizes.result != 'success' && needs.file_sizes.result != 'skipped' }}
+      if: needs.file_sizes.result != 'success' && needs.file_sizes.result != 'skipped'
       run: exit 1
+
     - name: Check tool test status
-      if: ${{ needs.combine_outputs.result != 'success' && needs.combine_outputs.result != 'skipped' }}
+      if: needs.combine_outputs.result != 'success' && needs.combine_outputs.result != 'skipped'
       run: exit 1
